--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <div id="root"></div>
+	<!-- Корневой элемент для всего приложения -->
+	<div id="root"></div>
+	<!-- Корневой элемент для модальных окон -->
+	<div id="react-modals"</div>
 </body>
 
 </html>
