--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<!-- Корневой элемент для всего приложения -->
 	<div id="root"></div>
 	<!-- Корневой элемент для модальных окон -->
-	<div id="react-modals"</div>
+	<div id="react-modals"></div>
 </body>
 
 </html>
